@@ -25,107 +25,99 @@ public class Bank extends Task {
 
     @Override
     public boolean activate() {
-        ItemGroupResult inventorySnapshot;
+        ItemGroupResult inv;
 
-        // If using banked cut gems mode, activate when we don't have cut gems
+        // banked cut gems mode - bank when no cut gems
         if (useBankedGems && makeBoltTips) {
-            inventorySnapshot = script.getWidgetManager().getInventory().search(Set.of(selectedCutGemID, selectedBoltTipID));
-            if (inventorySnapshot == null) return false;
-            // Bank when we don't have cut gems (either we have bolt tips to deposit, or we're starting fresh)
-            return !inventorySnapshot.contains(selectedCutGemID);
+            inv = script.getWidgetManager().getInventory().search(Set.of(selectedCutGemID, selectedBoltTipID));
+            if (inv == null) return false;
+            return !inv.contains(selectedCutGemID);
         }
 
-        // If making bolt tips (not from banked), activate when we have bolt tips and no uncut gems
+        // bolt tips mode - bank when have tips and no gems
         if (makeBoltTips) {
-            inventorySnapshot = script.getWidgetManager().getInventory().search(Set.of(selectedUncutGemID, selectedCutGemID, selectedBoltTipID));
-            if (inventorySnapshot == null) return false;
-            // Bank when we have bolt tips and no uncut/cut gems, OR we're starting fresh with nothing
-            boolean hasBoltTips = inventorySnapshot.contains(selectedBoltTipID);
-            boolean hasUncut = inventorySnapshot.contains(selectedUncutGemID);
-            boolean hasCut = inventorySnapshot.contains(selectedCutGemID);
-            return (hasBoltTips && !hasUncut && !hasCut) || (!hasUncut && !hasCut && !hasBoltTips);
+            inv = script.getWidgetManager().getInventory().search(Set.of(selectedUncutGemID, selectedCutGemID, selectedBoltTipID));
+            if (inv == null) return false;
+            boolean hasTips = inv.contains(selectedBoltTipID);
+            boolean hasUncut = inv.contains(selectedUncutGemID);
+            boolean hasCut = inv.contains(selectedCutGemID);
+            return (hasTips && !hasUncut && !hasCut) || (!hasUncut && !hasCut && !hasTips);
         }
 
-        // Normal mode: activate when we don't have uncut gems
-        inventorySnapshot = script.getWidgetManager().getInventory().search(Set.of(selectedUncutGemID));
-        if (inventorySnapshot == null) return false;
-        return !inventorySnapshot.contains(selectedUncutGemID);
+        // normal mode - bank when no uncut gems
+        inv = script.getWidgetManager().getInventory().search(Set.of(selectedUncutGemID));
+        if (inv == null) return false;
+        return !inv.contains(selectedUncutGemID);
     }
 
     @Override
     public boolean execute() {
-        task = getClass().getSimpleName();
+        task = "Banking";
         if (!script.getWidgetManager().getBank().isVisible()) {
             openBank();
             return false;
         }
 
-        // Give bank a moment to fully load before searching
         script.pollFramesHuman(() -> false, script.random(300, 500));
 
-        task = "Get bank snapshot";
+        task = "Search bank";
 
-        // Determine what item we need to withdraw based on mode
+        // determine what to withdraw
         int itemToWithdraw;
         String itemName;
 
         if (useBankedGems && makeBoltTips) {
-            // Using banked cut gems mode - withdraw cut gems
             itemToWithdraw = selectedCutGemID;
             itemName = script.getItemManager().getItemName(selectedCutGemID);
         } else {
-            // Normal mode or making bolt tips from uncut - withdraw uncut gems
             itemToWithdraw = selectedUncutGemID;
             itemName = script.getItemManager().getItemName(selectedUncutGemID);
         }
 
-        script.log(getClass(), "Searching for " + itemName + " (ID: " + itemToWithdraw + ") in bank");
+        script.log(getClass(), "looking for " + itemName);
 
-        ItemGroupResult bankSnapshot = script.getWidgetManager().getBank().search(Set.of(itemToWithdraw));
-        ItemGroupResult inventorySnapshot = script.getWidgetManager().getInventory().search(Collections.emptySet());
+        ItemGroupResult bank = script.getWidgetManager().getBank().search(Set.of(itemToWithdraw));
+        ItemGroupResult inv = script.getWidgetManager().getInventory().search(Collections.emptySet());
 
-        if (inventorySnapshot == null) {
-            script.log(getClass(), "Inventory not visible");
+        if (inv == null) {
+            script.log(getClass(), "inventory not visible");
             return false;
         }
-        if (bankSnapshot == null) {
-            script.log(getClass(), "Bank snapshot is null - bank might not be ready");
+        if (bank == null) {
+            script.log(getClass(), "bank not ready");
             return false;
         }
 
-        task = "Check bank items";
+        task = "Check bank";
 
-        // Check if we found the item we need
-        if (bankSnapshot.contains(itemToWithdraw)) {
-            int itemCount = bankSnapshot.getAmount(itemToWithdraw);
-            script.log(getClass(), "Found " + itemCount + " " + itemName + " in bank");
+        if (bank.contains(itemToWithdraw)) {
+            int count = bank.getAmount(itemToWithdraw);
+            script.log(getClass(), count + " " + itemName + " in bank");
         } else {
-            script.log(getClass(), "bankSnapshot.contains() returned false for ID " + itemToWithdraw);
-            script.log(getClass(), "Ran out of " + itemName + ". Stopping script.");
+            script.log(getClass(), "out of " + itemName + ", stopping");
             script.stop();
             return false;
         }
 
-        // Deposit all except chisel
-        task = "Deposit items";
+        // deposit all except chisel
+        task = "Deposit";
         script.getWidgetManager().getBank().depositAll(Set.of(ItemID.CHISEL));
-
-        // Wait a moment for deposit to complete
         script.pollFramesHuman(() -> false, script.random(300, 600));
 
-        // Get fresh inventory snapshot AFTER depositing to calculate correct empty slots
-        inventorySnapshot = script.getWidgetManager().getInventory().search(Collections.emptySet());
-        if (inventorySnapshot == null) {
-            script.log(getClass(), "Inventory not visible after deposit");
+        // refresh inv after deposit
+        inv = script.getWidgetManager().getInventory().search(Collections.emptySet());
+        if (inv == null) {
+            script.log(getClass(), "inventory gone after deposit");
             return false;
         }
 
-        int emptySlots = inventorySnapshot.getFreeSlots();
-        script.log(getClass(), "Empty inventory slots after deposit: " + emptySlots);
+        int slots = inv.getFreeSlots();
+        script.log(getClass(), slots + " empty slots");
 
-        task = "Withdraw items";
-        if (!script.getWidgetManager().getBank().withdraw(itemToWithdraw, emptySlots)) {
-            script.log(getClass(), "Withdraw failed for " + itemName + ", re-polling.");
+        // withdraw
+        task = "Withdraw";
+        if (!script.getWidgetManager().getBank().withdraw(itemToWithdraw, slots)) {
+            script.log(getClass(), "withdraw failed");
             return false;
         }
 
@@ -137,33 +129,33 @@ public class Bank extends Task {
 
     private void openBank() {
         task = "Open bank";
-        script.log(getClass(), "Searching for a bank...");
+        script.log(getClass(), "finding bank");
 
-        List<RSObject> banksFound = script.getObjectManager().getObjects(TidalsGemCutter.bankQuery);
-        if (banksFound.isEmpty()) {
-            script.log(getClass(), "No bank objects found.");
+        List<RSObject> banks = script.getObjectManager().getObjects(TidalsGemCutter.bankQuery);
+        if (banks.isEmpty()) {
+            script.log(getClass(), "no bank found");
             return;
         }
 
-        RSObject bank = (RSObject) script.getUtils().getClosest(banksFound);
+        RSObject bank = (RSObject) script.getUtils().getClosest(banks);
         if (!bank.interact(TidalsGemCutter.BANK_ACTIONS)) {
-            script.log(getClass(), "Failed to interact with bank object.");
+            script.log(getClass(), "bank interact failed");
             return;
         }
 
-        AtomicReference<Timer> positionChangeTimer = new AtomicReference<>(new Timer());
-        AtomicReference<WorldPosition> previousPosition = new AtomicReference<>(null);
+        AtomicReference<Timer> posTimer = new AtomicReference<>(new Timer());
+        AtomicReference<WorldPosition> prevPos = new AtomicReference<>(null);
 
         script.pollFramesHuman(() -> {
             WorldPosition current = script.getWorldPosition();
             if (current == null) return false;
 
-            if (!Objects.equals(current, previousPosition.get())) {
-                positionChangeTimer.get().reset();
-                previousPosition.set(current);
+            if (!Objects.equals(current, prevPos.get())) {
+                posTimer.get().reset();
+                prevPos.set(current);
             }
 
-            return script.getWidgetManager().getBank().isVisible() || positionChangeTimer.get().timeElapsed() > 2000;
+            return script.getWidgetManager().getBank().isVisible() || posTimer.get().timeElapsed() > 2000;
         }, 15000);
     }
 }
